[package]
name = "balter-load-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balter = { version = "0.6", features = ["rt"] }
tokio =  { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
linkme = { version = "0.3" }
serde_json = { version = "1.0", features = ["std"] }
